--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav a:hover {
 
 /* Home Section */
 .home-section {
-  background-image: url('../assets/images/homepage.png'); /* Correct image path */
+  background-image: url('../assets/images/homepage.png');
   background-size: cover;
   background-position: center;
   padding: 100px 20px;
