--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ section h2 {
   position: absolute; /* Position image at the back */
   top: 0;
   left: 0;
-  z-index: -1; /* Send image behind the content */
+  /*z-index: -1; /* Send image behind the content */
 }
 
 .home-content {
