--- a/css/style.css
+++ b/css/style.css
@@ -72,8 +72,12 @@ section h2 {
 }
 /* Home Section Styling */
 .home-section {
-  background-image: url("../assets/images/homepage.png");
-  position: relative; /* Allows positioning of content relative to this container */
+  background-image: url("../assets/images/homepage.png"); /* Background image */
+  background-size: cover; /* Ensure it covers the entire section */
+  background-position: center; /* Center the image */
+  background-repeat: no-repeat; /* Prevent tiling */
+  /*min-height: 100vh; /* Full viewport height */
+  /*position: relative; /* Allows positioning of content relative to this container */
   text-align: center; /* Center-align text */
   color: #BFC9CA; /* White text for content */
   padding: 60px 20px; /* Add padding at the top and bottom */
@@ -87,7 +91,7 @@ section h2 {
   position: absolute; /* Position image at the back */
   top: 0;
   left: 0;
-  /*z-index: -1; /* Send image behind the content */
+  z-index: -1; /* Send image behind the content */
 }
 
 .home-content {
