--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,7 @@ section h2 {
   height: auto; /* Maintain aspect ratio */
   max-height: 100vh; /* Prevent the image from exceeding the viewport height */
   object-fit: cover; /* Ensures the image scales nicely */
-  position: absolute; /* Position image at the back */
+  /*position: absolute; /* Position image at the back */
   top: 0;
   left: 0;
   z-index: -1; /* Send image behind the content */
