--- a/css/style.css
+++ b/css/style.css
@@ -138,7 +138,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 /* Underline styling for all headings */
-h1::after, h2::after, h3::after, h4::after, h5::after, h6::after {
+h1::after, h2::after {
   content: ''; /* Empty content */
   display: block;
   width: 70%; /* Make the underline shorter than the heading (70% of the width) */
